--- a/app/views/listings/_listing.html.erb
+++ b/app/views/listings/_listing.html.erb
@@ -1,2 +1,40 @@
-<div id="<%= dom_id listing %>">
+<div class='flex items-center justify-center'>
+  <div class="p-4 items-center justify-center w-[680px] rounded-xl group sm:flex space-x-6 bg-white bg-opacity-50 shadow-xl hover:rounded-2xl">
+    <div class="mx-auto w-4/12 h-40 rounded-lg">
+      <%= image_tag(listing.thumbnail_link, class: 'w-full') %>
+      <%= render partial: 'listings/likes', locals: { listing: listing} %>
+    </div>
+    <div class="sm:w-8/12 pl-0 p-5">
+      <div class="space-y-2">
+        <div class="space-y-4">
+          <h4 class="text-md font-semibold text-cyan-900 text-justify">
+            <%= listing.title %>
+          </h4>
+        </div>
+        <div class="flex items-center ">
+          <div class="flex gap-1 space-y-1">
+            <img  src="<%= listing.user.current_avatar %>"  class="rounded-full h-8 w-8" />
+            <span class="text-sm"><%= listing.user.name %></span>
+          </div>
+          <div class="px-3 rounded-lg flex space-x-2 flex-row">
+            <div class="cursor-pointer text-center text-md justify-center items-center flex">
+              <svg stroke="currentColor" fill="yellow" viewBox="0 0 20 20" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"></path>
+              </svg>
+              <span class="text-md mx-1"><%= listing.user.rating || 0 %></span>
+            </div>
+          </div>
+        </div>
+        <div class="flex items-center justify-between">
+          <div class="text-grey-500 flex flex-row space-x-1  my-4">
+            <svg stroke="currentColor" fill="none" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+            </svg>
+            <%= listing.view %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
