--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,14 +1,4 @@
-<p style="color: green"><%= notice %></p>
+<section>
+  <%= render @listings %>
+</section>
 
-<h1>Listings</h1>
-
-<div id="listings">
-  <% @listings.each do |listing| %>
-    <%= render listing %>
-    <p>
-      <%= link_to "Show this listing", listing %>
-    </p>
-  <% end %>
-</div>
-
-<%= link_to "New listing", new_listing_path %>
